# serde-bindgen-core

./: .gitignore  Cargo.toml
sbc/: Cargo.toml
sbc-derive/: Cargo.toml
sbc-derive/src/: attributes.rs  bin.rs  context.rs  descriptor.rs  field.rs  keyword.rs  lib.rs  path.rs  utils.rs
sbc-derive/src/tests/: attribute.rs  field.rs  mod.rs  path.rs
sbc/src/: lib.rs
sbc/tests/: basic.rs  binding.rs  progress.rs  rename_all.rs  safe_copy.rs  weight.rs
scripts/: add-license.sh
